# Alembic

./: .gitignore  .pre-commit-config.yaml  README.md
.cursor/rules/: architecture-context.mdc  compliance-checklist.mdc  context-routing.mdc  datetime-handling.mdc  documentation.mdc  error-handling.mdc  functional-patterns.mdc  git-workflow.mdc  hermetic-voice.mdc  logging-observability.mdc  metaprompt.mdc  privacy-gdpr.mdc  security.mdc  solid-principles.mdc  stack.mdc  teaching-persona.mdc  testing.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.obsidian/: community-plugins.json  workspace.json
.obsidian/plugins/folder-notes/: data.json
backend/: .pre-commit-config.yaml  README.md  env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: health.py  reading.py  test.py
backend/app/core/llm/: __init__.py  client.py  prompts.py
backend/app/core/tarot/: __init__.py  deck.py  spreads.py
backend/app/core/tarot/data/: cards.json
backend/app/schemas/: reading.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_config.py  test_deck.py  test_health.py  test_reading.py  test_schemas.py
docs/: PROJECT-PLAN.md
docs/architecture/: api-design.md  data-model.md  system-overview.md
docs/decisions/: 001-stack-selection.md  002-llm-choice.md  003-monetization.md
docs/guides/: deployment.md  local-development.md  stripe-setup.md
docs/legal/: disclaimer.md  privacy-policy.md  terms-of-service.md
docs/prompts/: celtic-cross-prompt.md  follow-up-prompt.md  one-card-prompt.md  shadow-work-prompt.md  system-prompt.md  three-card-prompt.md
docs/tarot/: major-arcana.md  minor-arcana.md  spreads.md
frontend/: .eslintrc.json  .prettierignore  TESTING.md  components.json  env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/.husky/: pre-push
frontend/src/__tests__/e2e/: README.md
frontend/src/__tests__/integration/: README.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/lib/: api.test.ts  api.ts  supabase.ts  types.ts  utils.test.ts
frontend/src/test/: setup.ts  utils.tsx
infrastructure/supabase/: 001_initial_schema.sql
obsidian/00-inbox/: README.md
obsidian/01-daily/: template.md
obsidian/02-project/: kanban.md  milestones.md  tasks.md
scripts/: add_minor_arcana_metadata.py
(+15 files in other folders)
